--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.speedata.yilang.MainActivity">
 
     <TextView
@@ -20,5 +21,11 @@
         android:layout_height="wrap_content"
         android:text="StartTest"
         android:id="@+id/btn_start_test"/>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:id="@+id/img_test"
+        android:layout_gravity="center"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/ic_launcher_round"/>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
