--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,16 +16,29 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
     <Button
+        android:id="@+id/btn_start_test"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="StartTest"
-        android:id="@+id/btn_start_test"/>
-    <ImageView
-        android:layout_width="wrap_content"
-        android:id="@+id/img_test"
-        android:layout_gravity="center"
-        android:layout_height="wrap_content"
-        android:src="@mipmap/ic_launcher_round"/>
+        android:text="StartTest" />
 
+    <ImageView
+        android:id="@+id/img_test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:src="@mipmap/ic_launcher_round" />
+
+    <Button
+        android:id="@id/btn_register"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="注册" />
+
+    <Button
+        android:id="@+id/btn_ver"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="验证" />
 </LinearLayout>
