--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         android:src="@mipmap/ic_launcher_round" />
 
     <Button
-        android:id="@id/btn_register"
+        android:id="@+id/btn_register"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="注册" />
