--- a/app/src/main/res/layout/activity_register_finger.xml
+++ b/app/src/main/res/layout/activity_register_finger.xml
@@ -13,6 +13,11 @@
         android:layout_height="wrap_content" />
 
     <Button
+        android:id="@+id/btn_open"
+        android:text="打开"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <Button
         android:id="@+id/btn_zhuce"
         android:text="注册"
         android:layout_width="wrap_content"
