--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,11 +34,11 @@
         android:id="@+id/btn_register"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="注册" />
+        android:text="@string/btn_zhuce" />
 
     <Button
         android:id="@+id/btn_ver"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="验证" />
+        android:text="@string/btn_verify" />
 </LinearLayout>
