--- a/app/src/main/res/layout/activity_register_finger.xml
+++ b/app/src/main/res/layout/activity_register_finger.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content" />
     <Button
         android:id="@+id/btn_zhuce"
-        android:text="@string/btn_zhuce"
+        android:text="@string/btn_zhuce_finger"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <ImageView
