--- a/app/src/main/res/layout/activity_verify.xml
+++ b/app/src/main/res/layout/activity_verify.xml
@@ -60,12 +60,20 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="@string/btn_verify" />
+
         <Button
             android:id="@+id/btn_Enrolment"
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="@string/btn_zhuce" />
+
+        <Button
+            android:id="@+id/btn_clear"
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="@string/btn_clear" />
     </LinearLayout>
 
 
