--- a/app/src/main/res/layout/activity_verify.xml
+++ b/app/src/main/res/layout/activity_verify.xml
@@ -6,7 +6,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.speedata.yilang.VerifyActivity">
-
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/dakai"
+        android:text="@string/btn_open_finger"/>
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -75,6 +79,5 @@
             android:layout_weight="1"
             android:text="@string/btn_clear" />
     </LinearLayout>
-
 
 </LinearLayout>
