--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -41,6 +41,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:contentDescription="@string/choose_photo"
+        android:visibility="gone"
         android:contextClickable="true">
         <RadioButton
             android:layout_width="wrap_content"
@@ -51,29 +52,23 @@
             android:layout_height="wrap_content"
             android:text="Tom" />
     </RadioGroup>
-    <LinearLayout
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:id="@+id/imbtn_get_photo"
+
+        android:layout_gravity="center_horizontal"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/icon_take_photo" />
+
+    <ImageView
+        android:src="@mipmap/icon_default_user"
         android:layout_width="fill_parent"
-        android:layout_height="0dp"
         android:layout_weight="1"
-        android:orientation="horizontal">
-        <ImageView
-            android:src="@mipmap/icon_default_user"
-            android:layout_width="0dp"
-            android:layout_weight="3"
-            android:id="@+id/img_photo"
+        android:id="@+id/img_photo"
 
-            android:layout_gravity="center"
-            android:layout_height="wrap_content" />
-        <ImageButton
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:id="@+id/imbtn_get_photo"
-            android:visibility="gone"
-            android:layout_gravity="center_horizontal"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/icon_take_photo" />
+        android:layout_gravity="center"
+        android:layout_height="0dp" />
 
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
