--- a/app/src/main/res/layout/activity_register_finger.xml
+++ b/app/src/main/res/layout/activity_register_finger.xml
@@ -15,7 +15,7 @@
     <Button
         android:id="@+id/btn_open"
         android:text="@string/btn_open"
-        android:visibility="gone"
+        android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <Button
